--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <p>Currently a work in progress.</p>
+    A work in progress.
   </body>
 </html>
