--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Pylypuik</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title></title>
   </head>
   <body>
-    A work in progress.
+    
   </body>
 </html>
